--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/hyeri0609/studyLINE#readme",
   "dependencies": {
-    "express": "^4.16.2",
-    "mocha": "^4.0.1"
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "should": "^13.1.3",
+    "supertest": "^3.0.0"
   }
 }
